@@ -1,3 +1,10 @@
+2014-07-18  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_graph.php, include/functions_reporting.php:
+	fixed to show the unknown graph in simple graph.
+	
+	INCIDENT: #1035
+
 2014-07-17  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/auth/ldap.php, include/auth/mysql.php: fixed the
